Use mixin, fixup review spacing

--- a/scss/6-components/_page_review.scss
+++ b/scss/6-components/_page_review.scss
@@ -1,4 +1,6 @@
 .cads-page-review {
+  @include cads-paragraph-s();
+
   color: $cads-language__secondary-text-colour;
   margin-bottom: 0;
 
